data/derived/comb/progs/unify/prog4462.ml.out
Characters 85-86:
  | Sine u -> pi *. (eval u) * 1 * 1
                          ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
